syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package ayborg.gateway.analytics.v1;

service EventLog {
    rpc LogEvent (EventRequest) returns (google.protobuf.Empty) {}
}

message EventRequest {
    string service_type = 1;
    string service_unique_name = 2;
    google.protobuf.Timestamp time_stamp = 3;
    int32 log_level = 4;
    string message = 5;
    int32 event_id = 6;
    string event_name = 7;
}
